// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> flat story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorSuccess"
  type="button"
>
  ​
  Flat Button
</button>
`;

exports[`<Button /> link story renders snapshot 1`] = `
<button
  class="button variantLink colorAlert"
  type="button"
>
  ​
  Link Button
</button>
`;

exports[`<Button /> linkInBody story renders snapshot 1`] = `
<p
  class="typography sizeBody colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkInHeading story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkWithIcon story renders snapshot 1`] = `
<button
  class="button variantLink colorSuccess"
  type="button"
>
  ​
  Link with icon 
  <svg
    aria-hidden="true"
    class="svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</button>
`;

exports[`<Button /> outline story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorBrand"
  type="button"
>
  ​
  Outline Button
</button>
`;

exports[`<Button /> outlineWithIcon story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorWarning"
  type="button"
>
  ​
  Outline with icon 
  <svg
    aria-hidden="true"
    class="svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</button>
`;

exports[`<Button /> withDataTestId story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorAlert"
  data-testid="fake-test-id"
  type="button"
>
  ​
  Button with data-testid
</button>
`;

exports[`<Button /> withFakeClassName story renders snapshot 1`] = `
<button
  class="fake-className button sizeMedium variantOutline colorWarning"
  type="button"
>
  ​
  With fake className
</button>
`;
